# SPDX-License-Identifier: GPL-3.0-only
[package]
name = "fono-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "Latency + accuracy benchmark for Fono's STT/LLM pipeline using public-domain dictation clips."
publish = false

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# We depend on the STT trait so any backend (real cloud, real local, fake)
# can be benchmarked through a single runner. The LLM trait is optional —
# we wrap the cleanup stage so latency reports still mean something even
# when the user benchmarks STT-only.
fono-stt = { path = "../fono-stt", default-features = false }
fono-polish = { path = "../fono-polish", default-features = false, features = ["anthropic", "cerebras", "openai-compat"] }
fono-assistant = { path = "../fono-assistant", default-features = false, features = ["anthropic", "openai-compat"] }
# TTS engines, off by default. Only pulled in when the `tts-local` feature is
# enabled for the `fono-bench tts` subcommand; the shipped `fono` binary graph
# is unaffected (this crate is `publish = false` and never linked into it).
fono-tts = { path = "../fono-tts", default-features = false, optional = true }
fono-core = { path = "../fono-core" }
fono-download = { path = "../fono-download" }
toml = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true, optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[features]
# Mirror the upstream STT crate's feature flags so users can benchmark
# any provider without rebuilding the world.
default = ["groq"]
groq = ["fono-stt/groq"]
openai = ["fono-stt/openai"]
# Google STT via Gemini audio-understanding (ADR 0034), for the `tts-score`
# quality anchor. Uses a single GEMINI_API_KEY.
gemini = ["fono-stt/gemini"]
whisper-local = ["fono-stt/whisper-local"]
# Hardware-acceleration passthroughs. Off by default; require the
# matching SDK on the build host (CUDA toolkit, Vulkan SDK, ROCm).
# Enable to bench GPU-accelerated whisper.cpp inference against the
# CPU baseline.
accel-cuda = ["whisper-local", "fono-stt/accel-cuda"]
accel-vulkan = ["whisper-local", "fono-stt/accel-vulkan"]
accel-hipblas = ["whisper-local", "fono-stt/accel-hipblas"]
accel-openblas = ["whisper-local", "fono-stt/accel-openblas"]
# Streaming↔batch equivalence harness (plan v6 R18). Pulls in the
# streaming primitives from fono-stt and the small futures glue
# needed to build a BoxStream<StreamFrame> from an in-memory PCM
# buffer.
equivalence = ["fono-stt/streaming", "dep:tokio-stream"]
# Local ONNX TTS backend benchmark (`fono-bench tts`). Constructs Piper,
# Kokoro, and Supertonic engines directly to compare synthesis latency,
# real-time factor, memory, and quality across English + Romanian. Requires a
# pinned `libonnxruntime.a` via `ORT_LIB_LOCATION` at build time (same as
# building `fono` with `tts-local`). Off by default.
tts-local = ["dep:fono-tts", "fono-tts/tts-local"]
# Direct embedded llama.cpp polish and assistant backends for comparing
# Fono's local runtime against Ollama with the same fixtures.
llama-local = ["fono-polish/llama-local", "fono-assistant/llama-local"]
accel-polish-cuda = ["llama-local", "fono-polish/accel-cuda"]
accel-polish-vulkan = ["llama-local", "fono-polish/accel-vulkan"]
accel-polish-metal = ["llama-local", "fono-polish/accel-metal"]
accel-polish-rocm = ["llama-local", "fono-polish/accel-rocm"]

[[bin]]
name = "fono-bench"
path = "src/bin/fono-bench.rs"

[[bench]]
name = "orchestrator"
harness = false
