[package]
name = "fono-core"
description = "Shared types, config, paths, and SQLite schema for Fono."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
# Live-dictation budget controller + provider price table. Plan R12.
budget = []
# Runtime detection of Vulkan loader + physical devices via `ash`'s
# `loaded` (dlopen) backend. Off by default so the workspace's many
# fono-core consumers don't pull `ash` + `libloading` transitively;
# `fono` and `fono-update` opt in. Slice 2 of
# `plans/2026-05-02-fono-cpu-gpu-variants-v1.md`.
vulkan-probe = ["dep:ash"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
tempfile = { workspace = true }
rusqlite = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
ash = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

# notify-rust is the macOS/Windows backend for fono_core::notify. On
# Linux we shell out to `notify-send` instead (libnotify's bus discovery
# is more forgiving than zbus's pure-Rust path), so notify-rust is not
# pulled in for Linux builds.
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
notify-rust = { workspace = true }
