[package]
name = "fono-core"
description = "Shared types, config, paths, and SQLite schema for Fono."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
# Live-dictation budget controller + provider price table. Plan R12.
budget = []
# Shared process-wide llama.cpp backend singleton. Enabled transitively
# by `fono-polish`/`fono-assistant`'s own `llama-local` features so both
# embedded-LLM paths share one `LlamaBackend::init()` (a second init in
# the same process panics — see `src/llama_backend.rs`).
llama-local = ["dep:llama-cpp-2"]
# Runtime detection of Vulkan loader + physical devices via `ash`'s
# `loaded` (dlopen) backend. Off by default so the workspace's many
# fono-core consumers don't pull `ash` + `libloading` transitively;
# `fono` and `fono-update` opt in. Slice 2 of
# `plans/2026-05-02-fono-cpu-gpu-variants-v1.md`.
vulkan-probe = ["dep:ash"]
# Compile-time advertisement that the host binary was built with a
# whisper.cpp hardware-acceleration backend. These features have no
# Rust dependencies of their own; they are toggled by the parent
# `fono` / `fono-bench` crates' matching `accel-*` features. They are
# historical (the `HardwareSnapshot::accelerated()` accessor was
# replaced by the `HostGpu` enum in ADR 0028) but the build features
# remain to keep the workspace's `--features accel-*` matrix valid.
# See `docs/bench/calibration/summary/matrix.json` for the empirical
# justification (Phase 0, 2026-05-15).
accel-cuda = []
accel-vulkan = []
accel-hipblas = []
accel-metal = []
accel-coreml = []

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
tempfile = { workspace = true }
rusqlite = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
ash = { workspace = true, optional = true }
llama-cpp-2 = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

# notify-rust is the macOS/Windows backend for fono_core::notify. On
# Linux we shell out to `notify-send` instead (libnotify's bus discovery
# is more forgiving than zbus's pure-Rust path), so notify-rust is not
# pulled in for Linux builds.
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
notify-rust = { workspace = true }

# Mach bindings for the hardware probe (hw.memsize, hw.physicalcpu,
# host_statistics64). Linux keeps reading /proc directly.
[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }
