[package]
name = "fono-download"
description = "HuggingFace model downloader with SHA256 verification and progress UI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
fono-core = { path = "../fono-core" }
