[package]
name = "fono-hotkey"
description = "Global hotkey registration and recording-state FSM for Fono."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
fono-core = { path = "../fono-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
global-hotkey = { workspace = true }
crossbeam-channel = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2.21"
# Portal-based global hotkeys for native Wayland. Targets the
# `org.freedesktop.portal.GlobalShortcuts` interface (GNOME 46+,
# KDE Plasma 5.27+, Hyprland, sway). Dual MIT/Apache, GPL-3.0
# compatible. tokio feature avoids pulling glib/async-std.
ashpd = { version = "0.9", default-features = false, features = ["tokio"] }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = "0.8"
dirs = "5"

# `RegisterHotKey` binds each hotkey to a message-only window owned by
# the listener thread, so that thread must pump its Win32 message queue
# for `WM_HOTKEY` to be delivered (see `listener.rs`). `windows-sys` is
# already in Cargo.lock at 0.59 (via cpal / fono-tray), so this direct
# edge adds no new-to-project crate and is zero cost to the shipped
# Linux / macOS binaries (target tables do not unify off-target).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }
