[package]
name = "fono-inject"
description = "Text injection (`enigo` + Wayland fallbacks) and focus detection for Fono."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["x11-paste"]
# `enigo` compiles fine on Linux with X11 headers; keep it opt-in so the
# workspace `cargo build` on a minimal NimbleX without xdotool dev packages
# still succeeds.
enigo-backend = ["dep:enigo"]
x11-focus = ["dep:x11rb"]
# Pure-Rust XTEST keystroke backend (Ctrl+V paste from clipboard). No
# system tools needed; works on any X11 / XWayland session.
x11-paste = ["dep:x11rb"]

[dependencies]
fono-core = { path = "../fono-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
enigo = { workspace = true, optional = true }
x11rb = { workspace = true, optional = true }
