[package]
name = "fono-ipc"
description = "Cross-platform local IPC between the Fono daemon and CLI clients (Unix socket on Linux/macOS, named pipe on Windows)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
fono-core = { path = "../fono-core" }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
interprocess = { workspace = true }
