[package]
name = "fono-llm"
description = "Text formatting via LLMs: trait and local + cloud backends for Fono."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["cerebras", "openai-compat"]
cerebras = ["dep:reqwest"]
openai-compat = ["dep:reqwest"]
anthropic = ["dep:reqwest"]
llama-local = ["dep:llama-cpp-2"]

[dependencies]
fono-core = { path = "../fono-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, optional = true }
llama-cpp-2 = { workspace = true, optional = true }
