[package]
name = "fono-mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "MCP server for Fono — exposes fono.speak, fono.listen, fono.confirm over stdio"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
fono-core = { path = "../fono-core" }
fono-tts = { path = "../fono-tts" }
fono-stt = { path = "../fono-stt" }
fono-audio = { path = "../fono-audio" }
fono-overlay = { path = "../fono-overlay" }
fono-polish = { path = "../fono-polish" }
fono-ipc = { path = "../fono-ipc" }
fono-inject = { path = "../fono-inject" }
base64 = "0.22"
realfft = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
