[package]
name = "fono-net"
description = "Networking for Fono — Wyoming + Fono-native servers, clients, and mDNS autodiscovery."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
# Default: server side + LAN autodiscovery. Discovery is cheap (a
# single passive multicast listener) and pairs with the server so the
# default build is what an end-user wants. Slim / cloud-only builds
# drop both via `default-features = false`.
default = ["wyoming-server", "discovery", "llm-server", "web-settings"]
# Wyoming protocol server — accept LAN peers and drive an existing
# `Arc<dyn SpeechToText>` (whisper-rs, cloud, …).
wyoming-server = []
# mDNS / DNS-SD browser + advertiser. Slice 4 of the network plan.
discovery = ["dep:mdns-sd"]
# Local LLM inference HTTP server — OpenAI- + Ollama-compatible endpoints
# driving an existing `Arc<dyn Assistant>` (embedded llama.cpp, cloud, …).
# Raw hyper, hand-rolled router, no axum (ADR 0036). The hyper/http-body
# stack is already in the graph via reqwest, so this feature adds no new
# crate; `fono-assistant` is likewise already linked in the binary.
llm-server = ["dep:fono-assistant", "dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:bytes", "dep:reqwest"]
# Web settings UI — serves the embedded browser settings page plus its
# small JSON API (`GET/PUT /api/config`, `PUT /api/secret/{NAME}`).
# Same raw-hyper stack as `llm-server` (ADR 0036): every crate is
# already in the graph, so this feature adds no new dependency. The
# embedded HTML/CSS/JS assets are a few tens of KB of `include_str!`.
web-settings = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:bytes"]
# Future slices wire these on:
#   wyoming-client = []   # superseded by `fono-stt::wyoming` (Slice 2)
#   fono-server   = []    # Fono-native server, Slice 6
#   fono-client   = []    # Fono-native client, Slice 5

[dependencies]
fono-core = { path = "../fono-core" }
fono-net-codec = { path = "../fono-net-codec" }
# Wake-word detector trait (`WakeWord`) driven by the Wyoming wake
# *server* endpoint (Phase H). Default features only — the `WakeWord`
# trait + energy stub are light; the heavy `wakeword-onnx` (`ort`) edge
# is NOT pulled here. fono-audio is already in the binary's dependency
# graph (via `fono`), so this edge is net-zero on shipped binary size
# (AGENTS size rule).
fono-audio = { path = "../fono-audio", default-features = false }
fono-stt = { path = "../fono-stt", default-features = false }
# TTS trait only — the Wyoming TTS *server* endpoint drives any
# `Arc<dyn TextToSpeech>` (local engine, cloud, or a Wyoming-client
# backend). Default `wyoming` feature is light (pulls only the codec we
# already depend on); no native/C++ deps.
fono-tts = { path = "../fono-tts" }
# Assistant trait (`Arc<dyn Assistant>`) driven by the `llm-server`
# endpoint. Already in the binary's dependency graph (via `fono`), so
# this edge is net-zero on shipped binary size (AGENTS size rule).
fono-assistant = { path = "../fono-assistant", default-features = false, optional = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
mdns-sd = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
# HTTP server stack for the `llm-server` feature. All already in the
# dependency graph via reqwest's client stack (net-zero — see the
# workspace `Cargo.toml` note).
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
# Outbound HTTP client for the cloud pass-through proxy (ADR 0036). Already
# in the dependency graph (fono-assistant / fono-stt use it), so this edge
# is net-zero on shipped binary size (AGENTS size rule).
reqwest = { workspace = true, optional = true }

[dev-dependencies]
# Integration test exercises the real Wyoming client (Slice 2) against
# the server in this crate, with a mock `SpeechToText` underneath.
fono-stt = { path = "../fono-stt", features = ["wyoming"] }
# LLM-server round-trip test builds a mock `Arc<dyn Assistant>`.
fono-assistant = { path = "../fono-assistant", default-features = false }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
